--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Treinamento VBA
+description: Hoje toda inteligência do Labelo é baseada em Excel e Word, portanto é de suma importância que os colaboradores possuam a autonomia e o conhecimento necessários para a implementação de melhorias.
