--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Treinamento VBA
-description:
+description: Página do treinamento de VBA oferecido aos colaboradores do LABELO.
