Set theme jekyll-theme-architect

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-architect
 title: Treinamento VBA
 description: Página do treinamento de VBA oferecido aos colaboradores do LABELO.
