--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-tactile
 title: Treinamento VBA
 description: Página do treinamento de VBA oferecido aos colaboradores do LABELO.
