--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: jekyll-theme-cayman
 title: Treinamento VBA
 description: Página do treinamento de VBA oferecido aos colaboradores do LABELO.
+tags: -VBA 
+-Excel
+
+
