--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ title: Treinamento VBA
 description: Página do treinamento de VBA oferecido aos colaboradores do LABELO.
 tags: -VBA 
 -Excel
-
+show_downloads: true
 
